--- a/sass/style.scss
+++ b/sass/style.scss
@@ -528,9 +528,13 @@ $breakpoints:(
 // Aboutセクション
 .about{
     padding-top: 32px;
-    padding-bottom: 32px;
+    padding-bottom: 33px;
+}
+
+.about__img-position{
     position: relative;
     overflow: hidden;
+    padding-bottom: 139px;
 }
 
 .about__content{
@@ -640,7 +644,7 @@ $breakpoints:(
 
 .about__img-left{
     position: absolute;
-    top: 395px;
+    top: 362px;
     left: -140px;
     z-index: -1;
     img{
@@ -651,7 +655,7 @@ $breakpoints:(
 .about__img-right{
     position: absolute;
     right: -140px;
-    top: 273px;
+    top: 240px;
     z-index: -1;
     img{
         width: 200px;
@@ -660,7 +664,7 @@ $breakpoints:(
 
 .about-arrow{
     position: absolute;
-    top: 722px;
+    top: 690px;
     left: 50%;
     transform: translate(-50%);
 
@@ -671,7 +675,7 @@ $breakpoints:(
 
 .about-maru2ko{
     position: absolute;
-    top: 733px;
+    top: 690px;
     right: 51px;
 
     img{
@@ -681,7 +685,7 @@ $breakpoints:(
 
 .about-marutyari{
     position: absolute;
-    top: 758px;
+    top: 722px;
     right: 21px;
     img{
         width: 19px;
@@ -690,7 +694,7 @@ $breakpoints:(
 
 .about-goods{
     position: absolute;
-    top: 780px;
+    top: 747px;
     right: 65px;
     img{
         width: 133px;
@@ -699,12 +703,42 @@ $breakpoints:(
 
 .sakamichi{
     position: absolute;
-    top: 720px;
+    top: 690px;
     left: -20px;
+    z-index: 0;
     img{
         width: 216px;
     }
 }
+
+.about_onomichi{
+    position: absolute;
+    z-index: 50;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+    width: 335px;
+}
+
+.swiper {
+    overflow: hidden;
+}
+
+.swiper-wrapper {
+    display: flex;
+    gap: 10px;
+    width: 100px;
+    transition: transform 0.3s ease; /* アニメーションを追加 */
+}
+
+.swiper-slide {
+    width: 100px;
+    img{
+        width: 100px;
+    }
+}
+
+
 
 
 
